// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator snapshot: React + TypeScript algolia-client.ts 1`] = `
"import { algoliasearch } from 'algoliasearch';

export const searchClient = algoliasearch('APP_ID', 'SEARCH_KEY');
"
`;

exports[`generator snapshot: React + plain JS algolia-client.js 1`] = `
"import { algoliasearch } from 'algoliasearch';

export const searchClient = algoliasearch('APP_ID', 'SEARCH_KEY');
"
`;

exports[`generator: experience (React + Next.js App Router + TypeScript) snapshot: provider.tsx (Next.js App Router) 1`] = `
"'use client';

import type { ReactNode } from 'react';
import { InstantSearchNext } from 'react-instantsearch-nextjs';

import { searchClient } from '../../lib/algolia-client';

export function ProductSearchProvider({ children }: { children: ReactNode }) {
  return (
    <InstantSearchNext searchClient={searchClient} indexName=\\"products\\">
      {children}
    </InstantSearchNext>
  );
}
"
`;

exports[`generator: experience (React + TypeScript) snapshot: ClearRefinements.tsx 1`] = `
"import { ClearRefinements as InstantSearchClearRefinements } from 'react-instantsearch';

export function ClearRefinements() {
  return <InstantSearchClearRefinements />;
}
"
`;

exports[`generator: experience (React + TypeScript) snapshot: Pagination.tsx 1`] = `
"import { Pagination as InstantSearchPagination } from 'react-instantsearch';

export function Pagination() {
  return <InstantSearchPagination />;
}
"
`;

exports[`generator: experience (React + TypeScript) snapshot: SearchBox.tsx 1`] = `
"import { SearchBox as InstantSearchSearchBox } from 'react-instantsearch';

export function SearchBox() {
  return <InstantSearchSearchBox />;
}
"
`;

exports[`generator: experience (React + TypeScript) snapshot: provider.tsx 1`] = `
"import type { ReactNode } from 'react';
import { InstantSearch } from 'react-instantsearch';

import { searchClient } from '../../lib/algolia-client';

export function ProductSearchProvider({ children }: { children: ReactNode }) {
  return (
    <InstantSearch searchClient={searchClient} indexName=\\"products\\">
      {children}
    </InstantSearch>
  );
}
"
`;

exports[`generator: experience (React + plain JS) snapshot: ClearRefinements.jsx 1`] = `
"import { ClearRefinements as InstantSearchClearRefinements } from 'react-instantsearch';

export function ClearRefinements() {
  return <InstantSearchClearRefinements />;
}
"
`;

exports[`generator: experience (React + plain JS) snapshot: Pagination.jsx 1`] = `
"import { Pagination as InstantSearchPagination } from 'react-instantsearch';

export function Pagination() {
  return <InstantSearchPagination />;
}
"
`;

exports[`generator: experience (React + plain JS) snapshot: SearchBox.jsx 1`] = `
"import { SearchBox as InstantSearchSearchBox } from 'react-instantsearch';

export function SearchBox() {
  return <InstantSearchSearchBox />;
}
"
`;

exports[`generator: experience (React + plain JS) snapshot: provider.jsx 1`] = `
"import { InstantSearch } from 'react-instantsearch';

import { searchClient } from '../../lib/algolia-client';

export function ProductSearchProvider({ children }) {
  return (
    <InstantSearch searchClient={searchClient} indexName=\\"products\\">
      {children}
    </InstantSearch>
  );
}
"
`;

exports[`generator: schema-driven widgets (React + TypeScript) snapshot: Hits.tsx 1`] = `
"import { Hits as InstantSearchHits } from 'react-instantsearch';

type HitRecord = {
  name: string;
  image_url: string;
  description: string;
};

function Hit({ hit }: { hit: HitRecord }) {
  return (
    <article>
      <img src={hit.image_url} alt={hit.name} />
      <h3>{hit.name}</h3>
      <p>{hit.description}</p>
    </article>
  );
}

export function Hits() {
  return <InstantSearchHits<HitRecord> hitComponent={Hit} />;
}
"
`;

exports[`generator: schema-driven widgets (React + TypeScript) snapshot: Hits.tsx without image 1`] = `
"import { Hits as InstantSearchHits } from 'react-instantsearch';

type HitRecord = {
  name: string;
  description: string;
};

function Hit({ hit }: { hit: HitRecord }) {
  return (
    <article>
      <h3>{hit.name}</h3>
      <p>{hit.description}</p>
    </article>
  );
}

export function Hits() {
  return <InstantSearchHits<HitRecord> hitComponent={Hit} />;
}
"
`;

exports[`generator: schema-driven widgets (React + TypeScript) snapshot: RefinementList.tsx 1`] = `
"import { RefinementList as InstantSearchRefinementList } from 'react-instantsearch';

export function RefinementList() {
  return <InstantSearchRefinementList attribute=\\"brand\\" />;
}
"
`;

exports[`generator: schema-driven widgets (React + TypeScript) snapshot: SortBy.tsx 1`] = `
"import { SortBy as InstantSearchSortBy } from 'react-instantsearch';

const items = [
  { value: 'products', label: 'Featured' },
  { value: 'products_price_asc', label: 'price asc' },
  { value: 'products_price_desc', label: 'price desc' },
];

export function SortBy() {
  return <InstantSearchSortBy items={items} />;
}
"
`;

exports[`generator: schema-driven widgets (React + plain JS) snapshot: Hits.jsx 1`] = `
"import { Hits as InstantSearchHits } from 'react-instantsearch';

function Hit({ hit }) {
  return (
    <article>
      <img src={hit.image_url} alt={hit.name} />
      <h3>{hit.name}</h3>
      <p>{hit.description}</p>
    </article>
  );
}

export function Hits() {
  return <InstantSearchHits hitComponent={Hit} />;
}
"
`;

exports[`generator: schema-driven widgets (React + plain JS) snapshot: Hits.jsx without image 1`] = `
"import { Hits as InstantSearchHits } from 'react-instantsearch';

function Hit({ hit }) {
  return (
    <article>
      <h3>{hit.name}</h3>
      <p>{hit.description}</p>
    </article>
  );
}

export function Hits() {
  return <InstantSearchHits hitComponent={Hit} />;
}
"
`;

exports[`generator: schema-driven widgets (React + plain JS) snapshot: RefinementList.jsx 1`] = `
"import { RefinementList as InstantSearchRefinementList } from 'react-instantsearch';

export function RefinementList() {
  return <InstantSearchRefinementList attribute=\\"brand\\" />;
}
"
`;

exports[`generator: schema-driven widgets (React + plain JS) snapshot: SortBy.jsx 1`] = `
"import { SortBy as InstantSearchSortBy } from 'react-instantsearch';

const items = [
  { value: 'products', label: 'Featured' },
  { value: 'products_price_asc', label: 'price asc' },
  { value: 'products_price_desc', label: 'price desc' },
];

export function SortBy() {
  return <InstantSearchSortBy items={items} />;
}
"
`;
